# nwave-codex

./: .gitignore  MANIFEST.in  README.md  pyproject.toml
src/nwave_codex/: __init__.py  cli.py  installer.py
src/nwave_codex/skill_bundle/nwave/: SKILL.md
src/nwave_codex/skill_bundle/nwave/agents/: openai.yaml
src/nwave_codex/skill_bundle/nwave/references/codex/: command-map.md  deliver-mode.md  interaction-mode.md  parity.md
tests/: test_cli.py
