[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "nwave-codex"
version = "0.1.0"
description = "Codex skill-pack port of the nWave workflow"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
classifiers = [
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
]

[project.urls]
Homepage = "https://github.com/MaxwellCalkin/nwave-codex"
Repository = "https://github.com/MaxwellCalkin/nwave-codex"
Issues = "https://github.com/MaxwellCalkin/nwave-codex/issues"

[project.scripts]
nwave-codex = "nwave_codex.cli:main"

[tool.setuptools]
package-dir = { "" = "src" }
include-package-data = true

[tool.setuptools.packages.find]
where = ["src"]
